--- a/style.css
+++ b/style.css
@@ -2,3 +2,118 @@
     margin: 0;
     padding: 0;
 }
+
+.wrapper {
+    padding-left: calc(50% - 573px);
+    padding-right: calc(50% - 573px);
+}
+
+.header {
+    background: rgba(2, 10, 24, 1);
+    padding-top: 39px;
+    padding-bottom: 39px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 32px;
+}
+
+.header__link {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 22px;
+}
+
+.header__link:hover {
+    color: #3A68B8;
+}
+
+.top__content {
+    background: rgba(2, 10, 24, 1);
+    padding-top: 160px;
+    padding-bottom: 160px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 128px;
+}
+
+.top__info {
+    display: flex;
+    flex-direction: column;
+}
+
+.top__info__subtitle {
+    color: rgb(58, 104, 184);
+    font-family: "Open Sans";
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 160%;
+    margin-bottom: 10px;
+}
+
+.top__info__title {
+    width: 604px;
+    color: rgb(255, 255, 255);
+    font-family: "Open Sans";
+    font-size: 55px;
+    font-weight: 800;
+    line-height: 130%;
+}
+
+.top__info__text {
+    margin: 40px 0 50px 0;
+    width: 558px;
+    color: rgb(255, 255, 255);
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 160%;
+    opacity: 0.7;
+}
+
+.top__buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.button {
+    padding: 15px 30px;
+    background: #3A68B8;
+    border: none;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    font-family: "Open Sans";
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.top__img__container {
+    width: 414px;
+    height: 415px;
+}
+
+.top__img {
+    width: 100%;
+    height: 100%;
+}
+
+.top__logos {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: rgba(2, 10, 24, 1);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 71px;
+}
+
